[package]
name = "olly-journal-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
tokio = { version = "1.44.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["json"] }
uuid = { version = "1.16.0", features = ["v4"] }
parking_lot = "0.12"
dotenv = "0.15"
chrono = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
